# picobox

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml
docs/: api.rst  changes.rst  conf.py  index.rst  quickstart.rst  requirements.txt
docs/ext/: asgiscopes.rst  flaskscopes.rst  index.rst  wsgiscopes.rst
examples/cascade/: example.py
examples/classes/: example.py
examples/complex/: example.py
examples/flask/: example.py  tools.py  wsgi.py
examples/requests/: example.py
picobox/: __init__.py  _box.py  _scopes.py  _stack.py
src/picobox/: __init__.py  _box.py  _compat.py  _scopes.py  _stack.py
src/picobox/contrib/: enterprise.py  flaskscopes.py
src/picobox/ext/: __init__.py  asgiscopes.py  flaskscopes.py  starlettescopes.py  wsgiscopes.py
tests/: conftest.py  test_box.py  test_scopes.py  test_stack.py
tests/contrib/: test_enterprise.py  test_flaskscopes.py
tests/ext/: test_asgiscopes.py  test_flaskscopes.py  test_starlettescopes.py  test_wsgiscopes.py
