[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "picobox"
description = "Dependency injection framework designed with Python in mind."
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Ihor Kalnytskyi", email = "ihor@kalnytskyi.com" },
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://picobox.readthedocs.io"
Source = "https://github.com/ikalnytskyi/picobox"
Bugs = "https://github.com/ikalnytskyi/picobox/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = ["pytest", "flask"]
scripts.run = "python -m pytest --strict {args:-vv}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black >= 23.9.1",
  "ruff == 0.0.292",
]
scripts.run = ["ruff {args:.}", "black --check --diff {args:.}"]

[tool.hatch.envs.docs]
dependencies = ["sphinx", "sphinx_rtd_theme"]
scripts.run = "sphinx-build -W -b html docs docs/_build/"

[tool.ruff]
select = ["F", "E", "W", "I", "S", "FBT", "B", "C4", "DTZ", "T10", "ISC", "RET", "SLF", "RUF"]
ignore = ["S101", "B904"]

[tool.ruff.isort]
known-first-party = ["picobox"]

[tool.ruff.per-file-ignores]
"examples/*" = ["I"]
