[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "picobox"
description = "Dependency injection framework designed with Python in mind."
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Ihor Kalnytskyi", email = "ihor@kalnytskyi.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://picobox.readthedocs.io"
Source = "https://github.com/ikalnytskyi/picobox"
Bugs = "https://github.com/ikalnytskyi/picobox/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-asyncio", "flask", "starlette", "httpx", "async-asgi-testclient"]
scripts.run = "python -m pytest --strict-markers {args:-vv}"

[tool.hatch.envs.lint]
detached = true
dependencies = ["ruff == 0.6.*"]
scripts.run = ["ruff check {args:.}", "ruff format --check --diff {args:.}"]

[tool.hatch.envs.type]
dependencies = ["mypy", "flask"]
scripts.run = ["mypy {args}"]

[tool.hatch.envs.docs]
pre-install-commands = ["python -m pip install -r docs/requirements.txt"]
scripts.run = "sphinx-build -W -b html docs docs/_build/"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "PLR", "D107", "D203", "D213", "D401", "SIM117", "N801", "PLW2901", "PERF203", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["INP001"]
"examples/*" = ["I", "D", "T20", "INP001"]
"examples/flask/wsgi.py" = ["F401", "E402"]
"tests/*" = ["D", "S101", "ARG001", "BLE001", "INP001"]

[tool.mypy]
files = ["src"]
pretty = true
strict = true
